# ComputerGraphics

./: .gitignore  .gitmodules  LICENSE  README.md
ForwardRenderingPipeline/: CMakeLists.txt  Color.cpp  Color.h  Main.cpp  Makefile  Scene.cpp  Vec4.cpp  Vec4.h  runInputs.py
ForwardRenderingPipeline/culling_disabled_inputs/: horse_and_mug.xml
OpenGL/: CMakeLists.txt
OpenGL/lib/glew/: .gitignore
OpenGL/shaders/: shader.frag  shader.vert
OpenGL/src/: Makefile  helper.cpp  helper.h  main.cpp
OpenGL/src/flat/: Makefile  helper.cpp  helper.h  hw3_flat.cpp  shader.frag  shader.vert
OpenGL/src/sphere/: Makefile  helper.cpp  helper.h  hw3_sphere.cpp  jconfig.h  shader.frag  shader.vert
Rasterization/: Scene.cpp  Scene.h
Rasterization/culling_enabled_inputs/: horse_and_mug.xml
RayTracing/: Camera.cpp  Camera.h  Image.cpp  Light.cpp  Makefile  Material.h  README  Ray.cpp  Ray.h  Scene.cpp  Scene.h  Shape.cpp  Shape.h  defs.h  helpers.h  main.cpp  members.txt  raytracer  runInputs.py
RayTracing/inputs/: dragon_lowres.xml
RayTracing/outputs/sample_outputs/: cornellbox_front.ppm  scienceTree_512x512.ppm
